@@ -1,3 +1,7 @@
+AyaSpirit 1.0.5, 2016-09-27
+------------------------
+- bug fixes
+
 AyaSpirit 1.0.4, 2016-09-25
 ------------------------
 - bug fixes
